# replica-rl

./: .gitignore  README.md  briefs.json  pyproject.toml
configs/: modal_haiku.yaml  modal_opus.yaml  modal_smoke.yaml
dataset/bright-smiles-pedo/: instruction.md  task.toml
dataset/coastal-marine-lab/: instruction.md  task.toml
dataset/form-furniture/: instruction.md  task.toml
dataset/harbor-law/: instruction.md  task.toml
dataset/hearth-table/: instruction.md  task.toml
dataset/observability-saas/: instruction.md  task.toml
dataset/offgrid-streetwear/: instruction.md  task.toml
dataset/pulse-festival/: instruction.md  task.toml
dataset/still-point-retreat/: instruction.md  task.toml
dataset/vault-wallet/: instruction.md  task.toml
report/: scores.json
scripts/: emit.py  freeze.py  generate.py  grade.py  render.py  visualize.py
scripts/figures/: make_proof_images.py  make_report_images.py
sites/bright-smiles-pedo/: index.html  services.html  team.html  visit.html
sites/coastal-marine-lab/: generation.json  index.html  research.html  styles.css
sites/form-furniture/: collection.html  craft.html  manifest.json
sites/harbor-law/: attorneys.html  contact.html  generation.json  manifest.json  practices.html
sites/hearth-table/: farms.html  generation.json  index.html  manifest.json  menu.html  story.html  visit.html
sites/observability-saas/: generation.json  integrations.html  manifest.json  styles.css
sites/offgrid-streetwear/: collection.html  index.html  manifest.json  manifesto.html  product.html  (+1 more)
tests/: degrade.py  validate.py
(+70 files in other folders)
