[project]
name = "design-to-code"
version = "0.1.0"
description = "A scalable recipe for generating website-design-to-code RL environments for Harbor."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "python-dotenv>=1.0",
    "playwright>=1.49",
    "scipy>=1.13",
    "pillow>=10.4",
    "open-clip-torch>=2.24",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/d2c"]
